--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ h4 {
 }
 
 .container {
-  width: 90vw;
+  width: 90%;
+  max-width: 1080px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,7 +39,7 @@ h4 {
   background-repeat: no-repeat;
   background-position: center;
   height: 75vh;
-  width: 75px;
+  width: 50px;
   cursor: pointer;
   transition: all 0.4s ease-in;
   border-radius: 5px;
@@ -47,6 +48,7 @@ h4 {
 .check {
   width: 100%;
   background-size: contain;
+  cursor: default;
 }
 
 .info {
