--- a/style.css
+++ b/style.css
@@ -35,10 +35,10 @@ h4 {
 }
 .painting {
   background-image: url(img/sunday-in-the-park.jpeg);
-  background-size: cover;
+  /* background-size: cover; */
   background-repeat: no-repeat;
   background-position: 0%;
-  height: 75vh;
+  height: 500px;
   width: 50px;
   cursor: pointer;
   border-radius: 5px;
