--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  justify-content: center;
+  justify-content: space-between;
   height: 100vh;
   overflow: hidden;
 }
@@ -38,7 +38,7 @@ h4 {
   /* background-size: cover; */
   background-repeat: no-repeat;
   background-position: 0%;
-  height: 500px;
+  height: 75vh;
   width: 50px;
   cursor: pointer;
   border-radius: 5px;
