--- a/style.css
+++ b/style.css
@@ -28,10 +28,12 @@ h4 {
 .container {
   width: 90%;
   max-width: 1080px;
+  min-height: 75vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  /* border: 2px solid red; */
 }
 .painting {
   background-image: url(img/sunday-in-the-park.jpeg);
@@ -42,6 +44,7 @@ h4 {
   width: 50px;
   cursor: pointer;
   border-radius: 5px;
+  /* border: 2px solid green; */
 }
 
 .check {
@@ -59,6 +62,7 @@ h4 {
   margin-bottom: 1.5em;
   opacity: 0;
   pointer-events: none;
+  /* border: 2px solid blue; */
 }
 /* 
 .hidden {
