--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h4 {
 
 .info {
   display: flex;
-  justify-content: space-around;
+  gap: 30px;
   align-items: center;
   margin: 1em;
   margin-bottom: 1.5em;
@@ -72,18 +72,17 @@ h4 {
 .answer {
   display: flex;
   flex-direction: column;
-  line-height: 1;
 }
 
 p {
-  margin: 0.2em 3em 0.2em 0;
+  margin: 0.2em 0 0.2em 0;
 }
 
 .title {
   font-style: italic;
 }
 
-.newPainting {
+#new-painting {
   background-color: #555;
   color: white;
   border: none;
@@ -92,11 +91,24 @@ p {
   border-radius: 10px;
 }
 
-.newPainting:hover {
+#new-painting:hover {
   background-color: black;
   cursor: pointer;
 }
 
 span {
   margin-right: 0.2em;
+}
+
+.dimensions {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.slider {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 5px;
 }
