Add label for dimension sliders

--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ h4 {
   color: red;
 }
 
+h5 {
+  margin: 0;
+  padding: 0;
+  font-size: 1rem;
+}
 .container {
   width: 90%;
   max-width: 1080px;
@@ -109,6 +114,6 @@ span {
 .slider {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   gap: 5px;
 }
