--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Muli', sans-serif;
+  font-family: 'Mulish', sans-serif;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -85,6 +85,7 @@ p {
 
 .title {
   font-style: italic;
+  font-weight: bold;
 }
 
 #new-painting {
