--- a/style.css
+++ b/style.css
@@ -45,8 +45,8 @@ h5 {
   /* background-size: cover; */
   background-repeat: no-repeat;
   background-position: 0%;
-  height: 75vh;
-  width: 50px;
+  height: 20%;
+  width: 20%;
   cursor: pointer;
   border-radius: 5px;
   /* border: 2px solid green; */
