--- a/style.css
+++ b/style.css
@@ -38,18 +38,17 @@ h5 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* border: 2px solid red; */
+  border: 2px solid red;
 }
 .painting {
   background-image: url(img/sunday-in-the-park.jpeg);
-  /* background-size: cover; */
   background-repeat: no-repeat;
   background-position: 0%;
   height: 20%;
   width: 20%;
   cursor: pointer;
   border-radius: 5px;
-  /* border: 2px solid green; */
+  border: 2px solid green;
 }
 
 .check {
@@ -67,7 +66,7 @@ h5 {
   margin-bottom: 1.5em;
   opacity: 0;
   pointer-events: none;
-  /* border: 2px solid blue; */
+  border: 2px solid blue;
 }
 
 .answer {
