--- a/style.css
+++ b/style.css
@@ -31,14 +31,14 @@ h5 {
   font-size: 1rem;
 }
 .container {
-  width: 60%;
+  width: 70%;
   max-width: 1080px;
   min-height: 75vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 .painting {
   background-image: url(img/sunday-in-the-park.jpeg);
@@ -48,7 +48,7 @@ h5 {
   width: 20%;
   cursor: pointer;
   border-radius: 5px;
-  border: 2px solid green;
+  /* border: 2px solid green; */
 }
 
 .check {
@@ -66,7 +66,7 @@ h5 {
   margin-bottom: 1.5em;
   opacity: 0;
   pointer-events: none;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
 }
 
 .answer {
