--- a/style.css
+++ b/style.css
@@ -25,8 +25,10 @@ h1 {
   margin-top: 1rem;
 }
 
-h4 {
-  margin-top: 0.5em;
+.subheading {
+  margin-top: 1em;
+  margin-bottom: 0;
+  font-size: 1.2rem;
   color: red;
 }
 
@@ -98,7 +100,7 @@ button {
   background-color: #555;
   color: white;
   border: none;
-  font-size: 18px;
+  font-size: 1.2rem;
   padding: 0.5em 1em;
   border-radius: 10px;
 }
